# cern-academic-training

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/actions/push/: action.yml
.github/workflows/: backend.yml  harvest.yml  test-and-build.yml
backend/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
backend/accounts/: serializers.py  views.py
backend/accounts/fixtures/: users.json
backend/api/: serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/backend/settings/: base.py  local.py  production.py  qa.py
backend/cds/: admin.py  apps.py  documents.py  models.py  serializers.py  tests.py  views.py
backend/cds/fixtures/: lectures.json
backend/cds/migrations/: 0001_initial.py  0002_alter_lecture_imprint.py  0002_alter_lecture_lecture_id.py  0002_auto_20220531_0905.py  0002_auto_20220531_1405.py  0003_alter_lecture_thumbnail_picture.py  0003_auto_20220124_1020.py  0004_alter_lecture_speaker_details.py  0004_auto_20220602_1504.py  0005_alter_lecture_lecture_id.py  0006_auto_20220602_1619.py  0007_auto_20220603_1116.py  0008_auto_20220722_0928.py  0009_rename_type_lecture_types.py  0010_lecture_video_parts.py
harvest/: Dockerfile  pyproject.toml  scrapy.cfg
harvest/harvest/: items.py  middlewares.py  pipelines.py  settings.py
harvest/harvest/spiders/: cds_spider.py
harvest/tests/: conftest.py  test_cds.py
harvest/tests/cassettes/: test_pipelines.yaml  test_the_whole_process.yaml
harvest/tests/data/: expected_records.json  record.xml  record_for_testing_speakers.xml  record_with_files.xml  record_with_parts.xml  record_without_files_and_video.xml  records_with_multi_videos.xml
ui/: Dockerfile  package-lock.json  package.json  tsconfig.json
ui/public/: index.html  manifest.json
ui/src/: App.css  App.tsx  data.ts  hooks.ts  index.css  index.tsx  photos.ts  setupProxy.js  store.ts
ui/src/api/: api_root.tsx
ui/src/common/: constants.ts  utils.ts
ui/src/components/: AT_HEADER.css  AT_HEADER.tsx  CERN_FOOTER.css  CERN_FOOTER.tsx  CERN_TOOLBAR.css  CERN_TOOLBAR.tsx  ErrorMessage.tsx  LOADING_ICON.css  LOADING_ICON.tsx  MENU.tsx  SEARCH_BAR.tsx  SORT_MENU.css  SORT_MENU.tsx  SUGGESTION_BOX.css  SUGGESTION_BOX.tsx  SortMenu.tsx
ui/src/events/: reveal.tsx
ui/src/features/: index.tsx
ui/src/features/footer/: CERN_FOOTER.css
ui/src/features/header/: AT_HEADER.css  AT_HEADER.tsx  AT_HEADER_SLICE.ts
ui/src/features/loading-icon/: LOADING_ICON.css
ui/src/features/login/: login_slice.tsx
ui/src/features/menu/: MENU.tsx
ui/src/features/search-bar/: SEARCH_BAR.tsx  search_slice.tsx
ui/src/features/suggestion-box/: SUGGESTION_BOX.tsx
ui/src/features/toolbar/: CERN_TOOLBAR.css  CERN_TOOLBAR.tsx
ui/src/models/: lectures.ts
ui/src/photos/carousel/: photos.ts
ui/src/photos/members/: members.ts
ui/src/routes/: about_us.tsx  contact.tsx  lecture.tsx  lectures.tsx  login.css  login.tsx  results.tsx
ui/src/services/: lecture.service.ts  lectures.service.ts
ui/src/types/: lecture.ts  lectures.ts
