[tool.poetry]
name = "harvest"
version = "0.1.0"
description = ""
authors = ["Harris Tzovanakis <me@drjova.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hepcrawl = "^13.0.43"
dojson = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
