[tool.poetry]
name = "harvest"
version = "0.1.0"
description = ""
authors = ["Harris Tzovanakis <me@drjova.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hepcrawl = "^13.0.43"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-datadir = "^1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
